# ros_dev

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  ros_shell
.devcontainer/: devcontainer.json  docker-compose.yml
configs/ignition_robotics/: config.yaml
docker/melodic/: Dockerfile  Dockerfile.base
docker/noetic/: Dockerfile  Dockerfile.base
outputs/melodic/: body_cameara.bag
src/melodic/cart_control/: CMakeLists.txt  package.xml
src/melodic/cart_control/config/: cart_config.launch.xml  cart_control.yaml
src/melodic/cart_control/include/cart_control/: cart_hw.h
src/melodic/cart_control/src/: cart_control.cpp  cart_hw.cpp  joy_twist_publisher.cpp  twist_to_controller_command.cpp
src/melodic/cart_control/test/: test_cart.launch  test_joy.launch  test_joy_and_command.launch
src/melodic/myrobot_description/: CMakeLists.txt  package.xml
src/melodic/myrobot_description/launch/: container_cabbage_1.launch  container_cabbage_100.launch  custom_world.launch  display.launch
src/melodic/myrobot_description/rviz/: urdf.rviz
src/melodic/myrobot_description/urdf/: gazebo_d435_override.xacro  myrobot.urdf.xacro  myrobot_v2.urdf.xacro  utils.xacro
src/melodic/myrobot_description/world/: container.world  container_big_cabbage_20.world  container_big_cabbages.world  container_cabbage_1.world  container_cabbage_20.world  container_cabbages.world  custom.world
src/melodic/myrobot_moveit/: CMakeLists.txt  package.xml
src/melodic/myrobot_moveit/config/: left_arm_config.launch.xml  myrobot.launch.xml  real_controllers.yaml  right_arm_config.launch.xml
src/melodic/myrobot_moveit/launch/: bringup.launch  custom_denso_robot_control.launch  image_view.launch  multiple_rs_camera.launch
src/melodic/myrobot_moveit/msg/: DetectedObject.msg
src/melodic/myrobot_moveit/scripts/: grasp_detection_client.py  manual_data_recoder.py  octomap_handler.py  planning.py  robot_info.py
src/melodic/myrobot_moveit/src/: add_object.py  grasp_detection_client.py  octomap_handler.py  pick_place.py  planning.py  pose_planner.py  test.py
src/melodic/myrobot_moveit_config/: .setup_assistant  package.xml
src/melodic/myrobot_moveit_config/config/: joint_limits.yaml  myrobot.srdf  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml
src/melodic/myrobot_moveit_config/launch/: demo_gazebo.launch  gazebo.launch  gazebo_depth_converter.launch  move_group.launch  moveit.rviz  planning_context.launch  ros_controllers.launch
src/melodic/myrobot_v2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/melodic/myrobot_v2_moveit_config/config/: custom_sensors_3d.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  myrobot.srdf  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml
src/melodic/myrobot_v2_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  myrobot_moveit_controller_manager.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/melodic/vs087_moveit_config/: CMakeLists.txt  package.xml
src/melodic/vs087_moveit_config/config/: ros_controllers.yaml
src/melodic/vs087_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  warehouse.launch
src/myrobot_description/launch/: display.launch
src/myrobot_description/sdf/big_container_open/: model.sdf
src/myrobot_description/src/: spawn_cabaggs.py
src/myrobot_description/urdf/: arm_with_hand.urdf.xacro  myrobot.urdf.xacro
src/myrobot_description/world/: container_cabbage_100.world
src/myrobot_moveit/: package.xml
src/myrobot_moveit/launch/: custom_denso_robot_control.launch
src/myrobot_moveit/src/: pick_place.py  pose_planner.py
src/myrobot_moveit_config/: .setup_assistant
src/myrobot_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  myrobot.srdf  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml
src/myrobot_moveit_config/launch/: demo_gazebo.launch  planning_context.launch  ros_controllers.launch  trajectory_execution.launch.xml
src/vs087_description/: CMakeLists.txt  package.xml  vs087.launch.xml  vs087.urdf  vs087.urdf.xacro
src/vs087_description/launch/: display.launch
src/vs087_description/vs087_config/: joint_limits.yaml  vs087.srdf
src/vs087_moveit_config/: .setup_assistant  package.xml
src/vs087_moveit_config/config/: fake_controllers.yaml  vs087.srdf
src/vs087_moveit_config/launch/: demo_gazebo.launch  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  trajectory_execution.launch.xml  vs087_moveit_controller_manager.launch.xml
(+15 files in other folders)
